--- a/D2/Deliverable2.tex
+++ b/D2/Deliverable2.tex
@@ -76,7 +76,13 @@ This section should provide a use case diagram for your application.
 \section{Analysis Class Diagram}
 \label{sec:analysis_class_diagram}
 % Begin Section
-This section should provide an analysis class diagram for your application.
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=150mm]{ClimatarACD}
+\caption{Analysis Class Diagram\label{acd}}
+\end{figure}
+
 % End Section
 
 
