--- a/D2/Deliverable2.tex
+++ b/D2/Deliverable2.tex
@@ -635,7 +635,7 @@ This section should contain all of your CRC cards.
 	  \end{tabular}
 	% CRC Card End %
 
-	
+
 \end{enumerate}
 % End Section
 
@@ -649,15 +649,15 @@ Include a Division of Labour sheet which indicates the contributions of each tea
 \hline
 	\textbf{Contributor Name} & \textbf{Contributions}  \\
   	\hline
-  	Wenbin Yuan & \\
+  	Wenbin Yuan & Uses Cases and CRC cards. Revised the document. \\
   	\hline
-  	Haris Khan &  \\
+  	Haris Khan &  CRC cards, initial draft of use cases. \\
   	\hline
   	Riley McGee & Original draft of 1.* and 4.* including figures for Module Uses Relation and Architecture\\
   	\hline
-  	Vishesh Gulatee & \\
+		Vishesh Gulatee & Use Cases, CRC cards, and document revision. \\
   	\hline
-  	James Taylor & \\
+  	James Taylor & Analysis Class Diagram, use case diagram refinement. \\
   	\hline
 \end{tabular}
 \\
