--- a/D2/Deliverable2.tex
+++ b/D2/Deliverable2.tex
@@ -507,7 +507,7 @@ This section should contain all of your CRC cards.
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
 	    Modify current political levels & PoliticalSystemModel \\
-	Check if political levels are within safe levels & PoliticalSystemModel \\
+			Check if political relations are within safe levels & PoliticalSystemModel \\
 	Update political statistics in simulator & WorldSimulator \\
 
 	    \hline
@@ -522,7 +522,7 @@ This section should contain all of your CRC cards.
 	    \hline
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
-	    Maintain political atmosphere data & - \\
+			Maintain political data & - \\
 
 	    \hline
 	  \end{tabular}
@@ -536,7 +536,7 @@ This section should contain all of your CRC cards.
 	    \hline
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
-	    Display political statistics data & - \\
+			Display political statistics & - \\
 
 	    \hline
 	  \end{tabular}
@@ -610,8 +610,7 @@ This section should contain all of your CRC cards.
 	    \hline
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
-	    Retrievers user interaction with World state & PlayScreenController \\
-	Retrieves user interaction with World Subsystems & PlayScreenController \\
+			Displays regional or global statistics to the user & PlayScreenController \\
 
 	    \hline
 	  \end{tabular}
