some contributions updates

--- a/D2/Deliverable2.tex
+++ b/D2/Deliverable2.tex
@@ -651,11 +651,11 @@ Include a Division of Labour sheet which indicates the contributions of each tea
   	\hline
   	Haris Khan &  CRC cards, initial draft of use cases. \\
   	\hline
-  	Riley McGee & Original draft of 1.* and 4.* including figures for Module Uses Relation and Architecture\\
+		Riley McGee & Original draft of 1.* and 4.* including figures for Module Uses Relation and Architecture. Document revision.\\
   	\hline
 		Vishesh Gulatee & Use Cases, CRC cards, and document revision. \\
   	\hline
-  	James Taylor & Analysis Class Diagram, use case diagram refinement. \\
+		James Taylor & Analysis Class Diagram, use case diagram refinement and document revision. \\
   	\hline
 \end{tabular}
 \\
