--- a/D2/Deliverable2.tex
+++ b/D2/Deliverable2.tex
@@ -273,6 +273,7 @@ This section should contain all of your CRC cards.
 	    \hline
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
+			Retrieve WorldState information from the WorldSimulator & - \\
 	    Modify current GHG levels & GHGSystemModel \\
 	Check if GHG levels are within safe levels & GHGSystemModel \\
 	Update GHG statistics in simulator & WorldSimulator \\
@@ -506,6 +507,7 @@ This section should contain all of your CRC cards.
 	    \hline
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
+			Retrieve WorldState information from the WorldSimulator & - \\
 	    Modify current political levels & PoliticalSystemModel \\
 			Check if political relations are within safe levels & PoliticalSystemModel \\
 	Update political statistics in simulator & WorldSimulator \\
@@ -549,7 +551,8 @@ This section should contain all of your CRC cards.
 	     \multicolumn{2}{|l|}{\textbf{Class Name:  WeatherSystemController}} \\
 	    \hline
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
-	    \hline
+			\hline
+			Retrieve WorldState information from the WorldSimulator & - \\
 	    Modify current temperature levels & WeatherSystemModel \\
 			Check if temperature levels are within safe threshold & WeatherSystemModel \\
 			Modify current precipitation levels & WeatherSystemModel \\
@@ -598,9 +601,7 @@ This section should contain all of your CRC cards.
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
 	    Store current world information & - \\
-	Send world state information to the WorldSimulator & WorldSimulator \\
-	Retrieve calculated world state info from WorldSimulator & WorldSimulator \\
-
+	
 	    \hline
 	  \end{tabular}
 	% CRC Card End %
@@ -627,7 +628,15 @@ This section should contain all of your CRC cards.
 	    \hline
 	    \textbf{Responsibility:} & \textbf{Collaborators:} \\
 	    \hline
-	    Generate news events & WeatherSystemController, GHGSystemController, PoliticalSystemController, NewsSystemController \\
+			Prompt the NewsEventGenerator to display a news event periodically & NewsEventGenerator \\
+			Modify the world state based on a news event & NewsEventGenerator \\
+			Expose the world state such that it can be accessed by Weather/Political/GHG System Controllers. & WeatherSystemController, PoliticalSystemController, GHGSystemController \\
+			Retrieve weather state information from the WeatherSystemController & WeatherSystemController \\
+			Retrieve political state information from the PoliticalSystemController & PoliticalSystemController \\
+			Retrieve green hous gas state information from the GHGSystemController & GHGSystemController \\
+			Retrieve world state information from the WorldState. & WorldState \\
+			Push new updated world state information to the WorldState. & WorldState \\
+			Push world state information to the StateView for display. & WorldState \\
 
 	    \hline
 	  \end{tabular}
